WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
243979
[ews-build.webkit.org] Ignore base commit when rebasing
https://bugs.webkit.org/show_bug.cgi?id=243979
Summary
[ews-build.webkit.org] Ignore base commit when rebasing
Kimmo Kinnunen
Reported
2022-08-16 00:30:41 PDT
EWS failed to apply a patch correctly when it had committer date in the patch 1. I created a patch and a PR around Aug 12, uploaded with `git webkit pr --no-update` 2. I rebased, amended the commit on Aug 15. It was now on top of Aug 15 ToT. 3. I uploaded the new patch with `git webkit pr --no-update`, on Aug 15. 4. I set the merge-queue EWS tried to rebase the patch on top of Aug 15 ToT with a upstream commit of Aug 11. (git rebase --onto <newbase> <upstream> <branch>) Naturally this rebase fails, at it tries to re-apply commits between Aug 11-15 on top of Aug 15 ToT.
https://ews-build.webkit.org/#/builders/69/builds/29926/steps/10/logs/stdio
git rebase --onto 7654da12692d947efe23243092725dc6abc96436 6bb3f1342f342358061b525c7b8f077b7b5ed15b eng/machsendright-to-ipc eng/machsendright-to-ipc is correctly on Aug 15 ToT: 7654da12692d 18021d1c87d2 (HEAD -> eng/machsendright-to-ipc, fork/eng/machsendright-to-ipc) Darwin specific IPC encoding primitives are implemented in WebKit/Shared but used in WebKit/Platform/IPC
https://bugs.webkit.org/show_bug.cgi?id=243870
Include a Radar link (OOPS!). 7654da12692d (origin/main, origin/HEAD, main) Navigator.share() rejects with wrong exception when called multiple times
https://bugs.webkit.org/show_bug.cgi?id=243652
The <upstream> was Aug 11: 6bb3f1342f34 [GTK] Fix build on macOS
https://bugs.webkit.org/show_bug.cgi?id=243759
Most likely same cause as
bug 243277
Attachments
Add attachment
proposed patch, testcase, etc.
Kimmo Kinnunen
Comment 1
2022-08-16 00:32:49 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/3350
Kimmo Kinnunen
Comment 2
2022-08-16 00:44:07 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/3351
Kimmo Kinnunen
Comment 3
2022-08-16 00:52:08 PDT
I probably am not able to test this, as the EWS will rebase only when trying to merge, and I don't want to try to merge a test commit. To reproduce, I would imagine this would do it: git reset $(git log --before "3 weeks ago" -1 --pretty=%H) echo " " >> Source/WebCore/platform/graphics/GraphicsContextGL.cpp git commit -a --date="3 weeks ago" git webkit pr --no-update git rebase $(git log --before "2 weeks ago") -1 pretty=%H) git webkit pr --no-update After this, you would need to make the EWS to try to run the rebase.
Kimmo Kinnunen
Comment 4
2022-08-16 01:26:08 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/3352
Radar WebKit Bug Importer
Comment 5
2022-08-23 00:31:14 PDT
<
rdar://problem/99019798
>
Jonathan Bedard
Comment 6
2022-08-23 14:43:50 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/3591
EWS
Comment 7
2022-08-23 17:33:42 PDT
Committed
253713@main
(f4104beafed4): <
https://commits.webkit.org/253713@main
> Reviewed commits have been landed. Closing PR #3591 and removing active labels.
Ryan Haddad
Comment 8
2023-01-11 09:46:37 PST
***
Bug 243277
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug