Test commit to test whether commit date affects anything https://bugs.webkit.org/show_bug.cgi?id=243979

Reviewed by NOBODY (OOPS!).

Created with:
git commit --date="3 weeks ago"

* a.txt: Added.